changed font and fixed li spacing

--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -1,6 +1,10 @@
 @import 'variables';
 
 .services-grid {
+  font-weight: 500;
+  line-height: 1.25rem;
+  font-size: .9375rem;
+  letter-spacing: 0.05rem;
   display: grid;
   place-items: center;
   grid-template-columns: repeat(8, minmax(0, 1fr));
@@ -23,7 +27,7 @@
       width: 100%;
       height: auto;
       border-radius: 6px;
-      box-shadow: 0 12px 18px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
     }
     .text-content {
       margin-top: 1rem;
@@ -34,18 +38,18 @@
       h3 {
         margin: 2rem 0 0 0;
         font-family: $secondary-font;
-        font-size: clamp(40px, 3.47vw, 70px);
+        font-size: clamp(2.5rem, 3.47vw, 4.5rem);
         justify-self: start;
         align-self: start;
         grid-column: span 4;
-        @media (max-width: 800px) {
+        @media (max-width: 50rem) {
             grid-column: span 8;
           }
       }
       p {
-        font-size: 15px;
+        margin-bottom: 1.5rem;
         grid-column: 5 / span 4;
-        @media (max-width: 800px) {
+        @media (max-width: 50rem) {
           grid-column: span 8;
         }
       }
@@ -54,13 +58,14 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         height: auto;
-        @media (max-width: 800px) {
+        @media (max-width: 50rem) {
           grid-column: span 8;
         }
         .bold {
           font-weight: 600;
         }
-        ul {
+        
+        li {
           list-style: none;
           padding-left: 1rem;
         }
